--- a/package.json
+++ b/package.json
@@ -1,40 +1,20 @@
 {
   "name": "learn-graphql",
-  "version": "1.0.0",
-  "description": "learn graphql basics",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "apollo-client-preset": "^1.0.8",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
+    "react": "^16.3.1",
+    "react-apollo": "^2.1.3",
+    "react-dom": "^16.3.1",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start-g": "nodemon ./server/index.js --exec babel-node",
-    "start-j": "json-server --watch ./server/data.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "ssh://git@github.com:frantzyy/learn-graphql.git"
-  },
-  "keywords": [
-    
-  ],
-  "author": "chris frantz",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "gitbook-cli": "2.3.2",
-    "json-server": "^0.12.1",
-    "nodemon": "^1.17.3"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "cors": "^2.8.4",
-    "express": "4.16.2",
-    "express-graphql": "^0.6.12",
-    "graphql": "0.13.2",
-    "http-proxy": "^1.16.2",
-    "https": "^1.0.0",
-    "react": "16.3.0",
-    "react-dom": "16.3.0"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
